# light-tube

./: .gitignore  README.md  config.yml  pyproject.toml
.github/workflows/: pytest.yml
.jules/: clene.md
app/: events.py  main.py  models.py  next_logic.py  player.py  state.py  storage.py  ui.py
core/: repository.py  video_fetcher.py
core/platform/: base.py  niconico.py  platform_a.py  platform_b.py  youtube.py
tests/: test_core.py  test_new_logic.py  test_next_logic.py  test_state.py
