[project]
name = "lightweight-video-player"
version = "0.1.0"
description = "Lightweight video player prototype"
authors = [
    {name = "Jules"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)"
]

[project.scripts]
video-player = "app.main:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
