[project]
name = "light-tube"
version = "0.1.0"
description = "Lightweight video player prototype"
authors = [
    {name = "Jules"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "PyYAML (>=6.0.1,<7.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "yt-dlp (>=2025.02.21)"
]

[tool.poetry]
packages = [{include = "app"}]

[project.scripts]
video-player = "app.main:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
